--- a/app/src/main/res/layout/favorites_destination.xml
+++ b/app/src/main/res/layout/favorites_destination.xml
@@ -46,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
-                android:visibility="gone"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toTopOf="@id/no_favorites_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -70,7 +70,7 @@
                 android:textAlignment="center"
                 android:textAppearance="@android:style/TextAppearance.Material.Headline"
                 android:textColor="?colorOnBackground"
-                android:visibility="gone"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
